--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -5,16 +5,18 @@ namespace: websocket-app-dev
 
 namePrefix: dev-
 
-commonLabels:
-  environment: dev
+labels:
+- pairs:
+    environment: dev
 
-bases:
+resources:
 - ../../base
 
 patches:
 - path: replica-patch.yaml
 - path: resource-patch.yaml
 - path: image-patch.yaml
+- path: ingress-patch.yaml
 
 configMapGenerator:
 - name: websocket-config
