Add connection-aware load balancing via readiness probes
  - Add /readiness endpoint that fails when pod at max connections
  - Update readinessProbe to use /readiness for capacity-aware routing
  - Pods at 10/10 connections are marked NotReady
  - Only pods with available capacity receive new connections

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -61,7 +61,7 @@ spec:
           successThreshold: 1
         readinessProbe:
           httpGet:
-            path: /health
+            path: /readiness
             port: 8081
             scheme: HTTP
           initialDelaySeconds: 0
