Implement zero-downtime deployments with graceful shutdown
  - Add SIGTERM handler to initiate graceful shutdown
  - Reject new connections during shutdown (send 503)
  - Keep existing WebSocket connections alive during drain
  - Update /readiness to fail during shutdown (removes from endpoints)
  - Set terminationGracePeriodSeconds to 3600 (1 hour)
  - Add preStop hook for endpoint propagation delay
  - Log connection count every 5s during drain
  - Exit gracefully when all connections closed or timeout reached

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,6 +18,9 @@ spec:
         app.kubernetes.io/name: websocket-server
         app.kubernetes.io/component: server
     spec:
+      # Allow up to 1 hour for graceful shutdown of active WebSocket connections
+      # Server receives SIGTERM, marks as NotReady, waits for connections to close
+      terminationGracePeriodSeconds: 3600
       containers:
       - name: websocket-server
         image: ghcr.io/williamguerzeder/websocket-app:latest
@@ -69,6 +72,12 @@ spec:
           timeoutSeconds: 1
           failureThreshold: 2
           successThreshold: 1
+        lifecycle:
+          preStop:
+            exec:
+              # Sleep briefly to allow Kubernetes to update Service endpoints
+              # before server receives SIGTERM and starts rejecting connections
+              command: ["/bin/sh", "-c", "sleep 5"]
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
